contrast error fix+ content stucture

--- a/styles/style.css
+++ b/styles/style.css
@@ -66,7 +66,7 @@ header {
 
 #affichage p {
   font-family: Arial, sans-serif;
-  color: #3a3750;
+  color: #000000;
 }
 
 
